--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,23 @@
 {
-    "manifest_version": 2,
-    "name": "YouTube Endcard Toggle",
-    "version": "1.0",
-    "description": "Toggle YouTube endcards on/off",
-    "permissions": ["activeTab"],
-    "browser_action": {
-      "default_icon": "icon.png",
-      "default_popup": "popup.html"
-    },
-    "content_scripts": [
-      {
-        "matches": ["*://www.youtube.com/*"],
-        "js": ["content.js"]
-      }
-    ]
+  "manifest_version": 3,
+  "name": "YouTube Endcard Toggle",
+  "version": "1.0",
+  "description": "Toggle YouTube endcards on/off",
+  "permissions": ["activeTab"],
+  "content_scripts": [
+    {
+      "matches": ["*://www.youtube.com/*"],
+      "js": ["content.js"],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["settings.js"],
+      "matches": ["*://www.youtube.com/*"]
+    }
+  ],
+  "icons": {
+    "48": "icon.png"
   }
-  
+}
