--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,10 @@
   "name": "YouTube Endcard Toggle",
   "version": "1.0",
   "description": "Toggle YouTube endcards on/off",
-  "permissions": ["activeTab"],
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
   "content_scripts": [
     {
       "matches": ["*://www.youtube.com/*"],
@@ -13,7 +16,13 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["toggle-endcards.js", "popup-comments.js", "snap-comments.js"],
+      "resources": [
+        "toggle-endcards.js", 
+        "popup-comments.js", 
+        "snap-comments.js", 
+        "snap-chapters.js",
+        "snap-watch-next-bar.js"
+      ],
       "matches": ["*://www.youtube.com/*"]
     }
   ],
